--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot[job-queue]==20.6
-requests
-psycopg2-binary
-python-dotenv
+python-telegram-bot==21.1.1
+asyncpg==0.29.0
+requests==2.32.3
+python-dotenv==1.0.1
